<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rich.calc.MainActivity"
    android:background="#d03f3f">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnOne"
        android:id="@+id/button1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="false"
        android:layout_marginTop="89dp"
        android:minWidth="80dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnTwo"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button1"
        android:layout_toEndOf="@+id/button1"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnThree"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFour"
        android:id="@+id/button4"
        android:layout_below="@+id/button1"
        android:layout_toStartOf="@+id/button2"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFive"
        android:id="@+id/button5"
        android:layout_below="@+id/button1"
        android:layout_toStartOf="@+id/button3"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSix"
        android:id="@+id/button6"
        android:layout_below="@+id/button2"
        android:layout_toEndOf="@+id/button5"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSeven"
        android:id="@+id/button7"
        android:layout_below="@+id/button4"
        android:layout_toStartOf="@+id/button5"

        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEight"
        android:id="@+id/button8"
        android:layout_alignTop="@+id/button7"
        android:layout_toEndOf="@+id/button7"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnNine"
        android:id="@+id/button9"
        android:layout_alignTop="@+id/button8"
        android:layout_alignEnd="@+id/button6"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnClear"
        android:id="@+id/buttonC"
        android:layout_below="@+id/button7"
        android:layout_toStartOf="@+id/button8"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnZero"
        android:id="@+id/button0"
        android:layout_below="@+id/button7"
        android:layout_toStartOf="@+id/button9"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEqual"
        android:id="@+id/buttonE"
        android:layout_below="@+id/button8"
        android:layout_toEndOf="@+id/button0"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPlus"
        android:id="@+id/buttonAdd"
        android:layout_below="@+id/buttonC"
        android:layout_toStartOf="@+id/button0"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMinus"
        android:id="@+id/buttonMin"
        android:layout_below="@+id/buttonC"
        android:layout_toStartOf="@+id/buttonE"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMultiply"
        android:id="@+id/buttonMul"
        android:layout_alignBottom="@+id/buttonMin"
        android:layout_alignEnd="@+id/buttonE"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDivide"
        android:id="@+id/buttonDiv"
        android:layout_below="@+id/buttonAdd"
        android:layout_alignParentStart="true"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPercent"
        android:id="@+id/buttonPercent"
        android:layout_alignBottom="@+id/buttonDiv"
        android:layout_toStartOf="@+id/buttonMul"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnConvert"
        android:id="@+id/buttonConvert"
        android:layout_alignTop="@+id/buttonPercent"
        android:layout_alignEnd="@+id/buttonMul"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDecimal"
        android:id="@+id/buttonDecimal"
        android:layout_below="@+id/buttonDiv"
        android:layout_toStartOf="@+id/buttonPercent"
        android:minWidth="80dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number|text"
        android:ems="10"
        android:id="@+id/editText"
        android:textColor="#000000"
        android:layout_alignParentStart="true"
        android:textAlignment="textEnd" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDel"
        android:id="@+id/buttonDel"
        android:layout_below="@+id/buttonPercent"
        android:layout_alignStart="@+id/buttonPercent"
        android:layout_toStartOf="@+id/buttonConvert" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnTan"
        android:id="@+id/buttonTan"
        android:layout_alignBottom="@+id/buttonDel"
        android:layout_alignStart="@+id/buttonConvert"
        android:layout_alignEnd="@+id/buttonConvert" />
</RelativeLayout>
